# quran_program

./: .gitignore  README.md  ToDo.txt  app.py  db_functions.py  main.py  pyproject.toml  requirements.txt  t1.txt
archive/: db_functions.py  q_app2.py  q_app3.py  q_app4.py  q_app5.py  q_app6.py  quran_app_txt
archive/data_wrangling/: audio_splits.json  aya.csv  copy_split_files.ipynb  create_sqlite.py  download_and_split_quran.ipynb  quran download.xlsx  quran_download.csv  split.csv  sqlite.csv  t1.txt
components/: __init__.py  audio_player.py  image_display.py  navigation_controls.py  page.py  selection_panel.py  status_bar.py
src/: hid_inputs.py
