[project]
name = "quran_app"
version = "0.1.0"
description = "Quran App"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "A S", email = "your@email.com" }
]
dependencies = [
  "flet"
]

[tool.flet]
org = "com.example"
product = "QuranApp"
company = "QuranApp
copyright = "Copyright (C) 2025 by QuranApp"

[tool.flet.app]
path = "."

[tool.flet.flutter.dependencies]
flet_audio = "*"
